# synflownet-boltz

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.codeboarding/: Configuration_Guidance_System.md  Core_GFlowNet_Engine.md  Data_Reward_Management.md  Framework_Utilities.md  Training_Monitoring_Orchestrator.md  on_boarding.md
docs/: README.md
synflownet/: __init__.py  config.py  online_trainer.py  trainer.py
synflownet-boltz-launcher/: README.md  boltz_reward_workers.sh  train_synflownet.sh
synflownet-boltz-launcher/configs/: TYK2_config.yaml
synflownet-boltz-launcher/data/: target_to_data.yaml
synflownet-boltz-launcher/data/msa_files/: TYK2.a3m
synflownet-boltz-launcher/monitoring/: data_loading_example.ipynb
synflownet-boltz-launcher/scripts/: boltz_reward_worker.py  train_synflownet.py
synflownet/algo/: graph_sampling.py  reaction_sampling.py  soft_q_learning.py  trajectory_balance.py
synflownet/data/: async_sql_databases.py  config.py  data_source.py  replay_buffer.py
synflownet/data/building_blocks/: enamine_bbs.txt  pharmaron_bbs.txt  pharmaron_input_bbs.txt  precompute_bb_masks.py  sanitized_bbs.txt  sanitized_bbs_pharmaron.txt  save_sdf_to_text.py  short_building_blocks_pharmaron.txt  short_building_blocks_subsampled_5000.txt
synflownet/data/scripts/: README.md  precompute_bb_masks.py  remove_duplicates.py  sanitize_building_blocks.py  select_short_building_blocks.py  subsample_building_blocks.py
synflownet/envs/: graph_building_env.py  synthesis_building_env.py
synflownet/models/: config.py  graph_transformer.py
synflownet/tasks/: async_reward_task.py  config.py  script_simulate_reward_worker.py
synflownet/utils/: conditioning.py  config.py  focus_model.py  metrics.py  misc.py  multiobjective_hooks.py  multiprocessing_proxy.py  sascore.py  scscore_numpy.py  sqlite_log.py  synthesis_evals.py  synthesis_utils.py  transforms.py
